--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,25 +1,173 @@
+  
+<style type="text/css">
+.slidecontainer {
+  width: 100%;
+}
 
+.slider {
+  -webkit-appearance: none;
+  /*width: 100%;*/
+         width: 828%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  /*transform-origin: 75px 75px;*/
+  transform-origin: 321px 290px;
+  transform: rotate(-90deg);
+}
 
+.slider:hover {
+  opacity: 1;
+}
 
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+</style>
 <script src="assets/p5.min.js"></script>
-  <script src="assets/p5.dom.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script> -->
+<script src="assets/p5.dom.min.js"></script>
+<script src="assets/three.js"></script>
 <script src="assets/ml5.min.js" type="text/javascript"></script>
-  <!-- load ml5.js -->
-  <!-- <script src="/ml5.min.js" type="text/javascript"></script> -->
-  <!-- keep the video in center of browser -->
-  <style type="text/css">
-    body{
-      text-align: center;
-    }
-  </style>
+<script src="assets/WebGL.js"></script>
+
+<script src="assets/gl-matrix.js"></script>
+
+<script src="assets/three.js"></script>
+<script src="assets/Detector.js"></script>
+<script src="assets/OrbitControls.js"></script>
+<script src="assets/OBJLoader.js"></script>
+<script src="assets/MTLLoader.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<style type="text/css">
+* {
+  box-sizing: border-box;
+}
+
+.column {
+ float: left;
+ /*width: 80%;*/
+ padding: 10px;
+ height: 300px; /* Should be removed. Only for demonstration */
+}
+.left, .right {
+  width: 7%;
+}
+
+.middle {
+  width: 30%;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.box{
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items:center;
+  border:1px solid #e3f2fd;
+}
+.item{
+  flex: 1 1 auto;
+  /*border:1px solid #ffebee;*/
+}
+</style>
+
+<div class="row">
+  <div  class="column left" style="height: 744px;">
+    <div>
+    <p style="   ">Width</p>
+    <input type="range" min="0" max="3000" value="0" class="slider" id="torso-width">
+  </div>
+  </div>
+  <div class="column middle">
+    <div  class="" style="width: 300%;">
+      <div class="box">
+      <p  class="item">Left:</p><p  class="item">Position:</p><p  class="item">Right:</p>
+      </div>
+      <input type="range" min="-3000" max="3000" value="0" class="slider-1" id="torso-position-x">
+    </div>
+    <div id="videoContainer" >
+
+    </div>
+    <div  class="" style="width: 300%;">
+     
+       <div class="box">
+      <p  class="item">Up:</p><p  class="item">Position:</p><p  class="item">Down:</p>
+      </div>
+      <input type="range" min="-3000" max="3000" value="0" class="slider-1" id="torso-position-y">
+    </div>
+
+ </div>
+ <div  class="column right " style="float: right;height: 744px;">
+  <p style="">Height</p>
+
+  <input type="range" min="0" max="3000" value="0" class="slider" id="torso-height">
+</div>
+</div>
+
+<script src="assets/posenet.js"></script>
+
+<script type="text/javascript">
+  // 3d model
+//   var SETTINGS={
+//     maxFaces: 4, //max number of detected faces
+//     cameraFOV: 40      //in degrees, 3D camera FOV
+// };
 
 
-
-  <!-- <p id="status">Loading Model...</p> -->
-  <div id="videoContainer"></div>
-  <!-- load the posenet.js file -->
-  <script src="assets/posenet.js"></script>
+// 3d model end
+</script>
 
 
+<style type="text/css">
+.slider-1 {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider-1:hover {
+  opacity: 1;
+}
+
+.slider-1::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider-1::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+</style>
