--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -40,10 +40,12 @@
 }
 
 </style>
-<script src="assets/p5.min.js"></script>
-<script src="assets/p5.dom.min.js"></script>
-<script src="assets/ml5.min.js" type="text/javascript"></script>
+<script src="/assets/p5.min.js" ></script>
+<script src="/assets/p5.dom.min.js" ></script>
+<script src="/assets/ml5.min.js" ></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="/assets/posenet.js"></script>
+
 <style type="text/css">
 * {
   box-sizing: border-box;
@@ -96,9 +98,8 @@
       </div>
       <input type="range" min="-3000" max="3000" value="0" class="slider-1" id="torso-position-x">
     </div>
-    <div id="videoContainer" >
-
-    </div>
+    
+      <div id="videoContainer"></div>
     <div  class="" style="width: 300%;">
      
        <div class="box">
@@ -115,18 +116,6 @@
 </div>
 </div>
 
-<script src="assets/posenet.js"></script>
-
-<script type="text/javascript">
-  // 3d model
-//   var SETTINGS={
-//     maxFaces: 4, //max number of detected faces
-//     cameraFOV: 40      //in degrees, 3D camera FOV
-// };
-
-
-// 3d model end
-</script>
 
 
 <style type="text/css">
