--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -41,6 +41,8 @@
 
 </style>
 <script src="/assets/p5.min.js" ></script>
+<script src="/assets/p5.dom.js" ></script>
+
 <script src="/assets/p5.dom.min.js" ></script>
 <script src="/assets/ml5.min.js" ></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -85,6 +87,7 @@
 </style>
 
 <div class="row">
+  <input type="file" name="" id="t-shirt">
   <div  class="column left" style="height: 744px;">
     <div>
     <p style="   ">Width</p>
